--- a/src/scss/core/_basics.scss
+++ b/src/scss/core/_basics.scss
@@ -7,7 +7,7 @@
     position: fixed;
     bottom: 0;
     justify-content: center;
-    z-index: 1000;
+    z-index: -1;
     transition: transform 0.5s;
 
     .hide-bar {
